CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(PROXY)

# silence policy CMP0042 warning by enabling RPATH explicitly
IF(APPLE AND NOT DEFINED CMAKE_MACOSX_RPATH)
	SET(CMAKE_MACOSX_RPATH TRUE)
ENDIF()

SET(CMAKE_MODULE_PATH ${PROXY_SOURCE_DIR}/cmake)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

FIND_PACKAGE(CAF REQUIRED COMPONENTS core io)

INCLUDE_DIRECTORIES(${CAF_INCLUDE_DIRS})

AUX_SOURCE_DIRECTORY(. PROXY_SOURCES)
ADD_EXECUTABLE(ranger_proxy ${PROXY_SOURCES})
TARGET_LINK_LIBRARIES(ranger_proxy ${CAF_LIBRARIES})

INSTALL(TARGETS ranger_proxy DESTINATION bin)
