CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(PROXY)

# silence policy CMP0042 warning by enabling RPATH explicitly
IF(APPLE AND NOT DEFINED CMAKE_MACOSX_RPATH)
	SET(CMAKE_MACOSX_RPATH TRUE)
ENDIF()

SET(CMAKE_MODULE_PATH ${PROXY_SOURCE_DIR}/cmake)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

FIND_PACKAGE(CAF REQUIRED COMPONENTS core io)
FIND_PACKAGE(Boost REQUIRED COMPONENTS system)
FIND_PACKAGE(ZLIB REQUIRED)
FIND_PACKAGE(OpenSSL REQUIRED)
INCLUDE_DIRECTORIES(
	${CAF_INCLUDE_DIRS}
	${Boost_INCLUDE_DIRS}
	${ZLIB_INCLUDE_DIRS}
	${OPENSSL_INCLUDE_DIR}
)

ADD_SUBDIRECTORY(src)

ENABLE_TESTING()
ADD_SUBDIRECTORY(test)
