INCLUDE_DIRECTORIES(${PROXY_SOURCE_DIR}/contrib/rapidxml)

AUX_SOURCE_DIRECTORY(. PROXY_SOURCES)
ADD_EXECUTABLE(ranger_proxy ${PROXY_SOURCES})
TARGET_LINK_LIBRARIES(ranger_proxy
	${CAF_LIBRARIES}
	${Boost_LIBRARIES}
	${ZLIB_LIBRARIES}
	${OPENSSL_CRYPTO_LIBRARY}
)

INSTALL(TARGETS ranger_proxy DESTINATION bin)
